# sign-pdf-for-free

./: .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
assets/affinity/: ai-kick.afphoto~lock~  download mac.afphoto  download mac.afphoto~lock~  download windows.afphoto  download windows.afphoto~lock~  home.afphoto  screenshots.afphoto  screenshots.afphoto~lock~  signature.afphoto  signature.afphoto~lock~
installer/: setup.py
src/pdf_sig/: __init__.py  config.py  controllers.py  gui.py  layout.py  operations.py  services.py
tests/: conftest.py
tests/pdf_sig/: test_controllers.py  test_gui_smoke.py  test_layout.py  test_operations.py
